--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link rel="stylesheet" href="" />
   </head>
   <body>
-    <!--[if lt IE 7]>
-      <p class="browsehappy">
-        You are using an <strong>outdated</strong> browser. Please
-        <a href="#">upgrade your browser</a> to improve your experience.
-      </p>
-    <![endif]-->
-
+    <div class="score">
+      <div class="player-score">0</div>
+      <div class="computer-score">0</div>
+    </div>
+    <div class="ball" id="ball"></div>
+    <div class="paddle-left" id="player-paddle"></div>
+    <div class="paddle-right" id="computer-paddle"></div>
     <script src="" async defer></script>
   </body>
 </html>
