--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>PixelPong</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="score">
@@ -18,8 +18,8 @@
       <div class="computer-score">0</div>
     </div>
     <div class="ball" id="ball"></div>
-    <div class="paddle-left" id="player-paddle"></div>
-    <div class="paddle-right" id="computer-paddle"></div>
-    <script src="" async defer></script>
+    <div class="paddle left" id="player-paddle"></div>
+    <div class="paddle right" id="computer-paddle"></div>
+    <script src="script.js" async defer></script>
   </body>
 </html>
