--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     <div class="ball" id="ball"></div>
     <div class="paddle left" id="player-paddle"></div>
     <div class="paddle right" id="computer-paddle"></div>
-    <script src="script.js" async defer></script>
+    <script src="script.js" type="module" async defer></script>
   </body>
 </html>
