Added and styled the start game modal

--- a/index.html
+++ b/index.html
@@ -10,9 +10,24 @@
     <title>PixelPong</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <dialog class="start-modal">
+      <div class="difficulty-text">Choose Difficulty:</div>
+      <button class="difficulty-button">Easy</button>
+      <button class="difficulty-button">Medium</button>
+      <button class="difficulty-button">Hard</button>
+      <div>
+        <button class="start-button">Start!</button>
+      </div>
+    </dialog>
     <div class="score">
       <div class="player-score">0</div>
       <div class="computer-score">0</div>
