Added the game end modal

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <button class="start-button">Start!</button>
       </div>
     </dialog>
+    <dialog class="end-modal">
+      <button class="play-again-button">Play Again!</button>
+    </dialog>
     <div class="score">
       <div class="player-score">0</div>
       <div class="computer-score">0</div>
