Added references to the easy medium and hard difficulty buttons

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <body>
     <dialog class="start-modal">
       <div class="difficulty-text">Choose Difficulty:</div>
-      <button class="difficulty-button">Easy</button>
-      <button class="difficulty-button">Medium</button>
-      <button class="difficulty-button">Hard</button>
+      <button class="difficulty-button easy">Easy</button>
+      <button class="difficulty-button medium">Medium</button>
+      <button class="difficulty-button hard">Hard</button>
       <div>
         <button class="start-button">Start!</button>
       </div>
