Added a winner text in the end modal

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       </div>
     </dialog>
     <dialog class="end-modal">
+      <div class="winner-text"></div>
       <button class="play-again-button">Play Again!</button>
     </dialog>
     <div class="score">
